--- a/src/task1/attack2/attack-config.json
+++ b/src/task1/attack2/attack-config.json
@@ -1,21 +1,33 @@
 {
-  "num_attacks": 1,
+  "num_attacks": 3,
   "configs0": {
     "attack": "cw",
-    "description": "cw-standard",
+    "description": "cw-L2-lr0.02",
     "norm": "l2",
     "lr": 0.02
   },
   "configs1": {
     "attack": "cw",
-    "description": "cw-standard",
+    "description": "cw-L2-lr0.2",
     "norm": "l2",
     "lr": 0.2
   },
   "configs2": {
     "attack": "cw",
-    "description": "cw-standard",
+    "description": "cw-L2-lr0.002",
     "norm": "l2",
     "lr": 0.002
+  },
+  "configs3": {
+    "attack": "cw",
+    "description": "cw-L2-lr0.99",
+    "norm": "l2",
+    "lr": 0.99
+  },
+  "configs4": {
+    "attack": "cw",
+    "description": "cw-L2-lr0.00002",
+    "norm": "l2",
+    "lr": 0.00002
   }
 }
