converted script to function

--- a/src/task1/attack2/attack-config.json
+++ b/src/task1/attack2/attack-config.json
@@ -1,5 +1,5 @@
 {
-  "num_attacks": 3,
+  "num_attacks": 10,
   "configs0": {
     "attack": "cw",
     "description": "cw-L2-lr0.02",
@@ -28,6 +28,36 @@
     "attack": "cw",
     "description": "cw-L2-lr0.00002",
     "norm": "l2",
+    "lr": 0.00002
+  },
+  "configs5": {
+    "attack": "cw",
+    "description": "cw-Lf-lr0.02",
+    "norm": "lf",
+    "lr": 0.02
+  },
+  "configs6": {
+    "attack": "cw",
+    "description": "cw-Lf-lr0.2",
+    "norm": "lf",
+    "lr": 0.2
+  },
+  "configs7": {
+    "attack": "cw",
+    "description": "cw-Lf-lr0.002",
+    "norm": "lf",
+    "lr": 0.002
+  },
+  "configs8": {
+    "attack": "cw",
+    "description": "cw-Lf-lr0.99",
+    "norm": "lf",
+    "lr": 0.99
+  },
+  "configs9": {
+    "attack": "cw",
+    "description": "cw-Lf-lr0.00002",
+    "norm": "lf",
     "lr": 0.00002
   }
 }
