--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,7 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+*/train_data.npy
+*/train_labels.npy
+*/test_data.npy
+*/test_labels.npy
